tests/success/operator_lookup_resolve_order.bz
function test(t: &const T)
{
	t[0];
}

struct T
{
	operator [] (self: &const T, : uint64);
}
