tests/error/type_match/typename_tuple_mismatched_element_count1.bz
function test1(T: [typename, typename, typename]);

function test()
{
	test1([int32, float64, str, char]);
}
